# dgenerate

./: .gitattributes  .gitignore  .readthedocs.yaml  FEATURE_TABLE.rst  LICENSE  MANIFEST.in  README.md  README.rst  build-dist.py  build.bat  build.sh  build_dist.py  check-new-dep-versions.py  commit.txt  config.dgen  dockerfile  error.bat  make-dev-env.bat  make-dev-env.sh  make_dev_env.py  pyproject.toml  run_tests.py  setup.py  test.py  update-console-schemas.py
.github/: FUNDING.yml
.github/workflows/: build-5.0.0-pre-release.yml
assetgen/: README.md  build.py
assetgen/builders/: console_schema_builder.py  docs_builder.py  hf_configs_builder.py  readme_builder.py
assetgen/core/: __init__.py  rst_preprocessor.py
devscripts/: check-new-dep-versions.py  condense-readme-links.py  gen-helsinki-nlp-translation-map.py  run_tests.py  update-console-schemas.py  update-readme-help-output.py
dgenerate/: __init__.py  __main__.py  __winentry__.py  args.py  arguments.py  auto1111_metadata.py  batchprocess.py  console.py  devicecache.py  dgenerate.py  diffusionloop.py  eval.py  event.py  events.py  exceptions.py  filecache.py  filelock.py  files.py  gcconfig.py  globalconfig.py  hfhub.py  hfutil.py  image.py  image_process.py  imageprocess.py  invoker.py  mediainput.py  mediaoutput.py  memoize.py  memory.py  messages.py  pipelinewrapper.py  pipelinewrappers.py  plugin.py  prompt.py  pygments.py  pyinstaller_transformers_patches.py  renderloop.py  renderloopconfig.py  resources.py  (+6 more)
dgenerate/_patches/: dbowring_sentencepiece_patch.py  diffusers_local_files_only_patch.py  diffusers_single_file_config_patch.py  hfhub_local_entry_missing_message_patch.py  pyinstaller_inpect_patch.py  tqdm_huggingface_hub_patch.py  transformers_dynamiccache_patch.py
dgenerate/batchprocess/: __init__.py  auto1111_metadata_directive.py  batchprocessor.py  batchprocessordirective.py  batchprocessorplugin.py  batchprocessorpluginloader.py  batchprocessplugin.py  batchprocesspluginloader.py  civitai_links_directive.py  configrunner.py  configrunnerbuiltins.py  configrunnerplugin.py  configrunnerpluginloader.py  directiveloader.py  image_process_directive.py  imageprocessdirective.py  jinjabalancechecker.py  postprocessdirective.py  preprocessdirective.py  prompt_upscale_directive.py  to_diffusers_directive.py  util.py
dgenerate/chainner/: __init__.py  checkpoint_pickle.py  model_loading.py  upscale.py
dgenerate/console/: __init__.py  argumentselect.py  codeview.py  combobox.py  console.py  directiveselect.py  dropdownselectwithhelp.py  filedialog.py  finddialog.py  fonts.py  functionselect.py  helpdialog.py  imageprocessorselect.py  imageseedselect.py  imageviewer.py  imageviewer_canvas.py  imageviewer_gl.py  karrasschedulerselect.py  latentsprocessorselect.py  modalselectwithhelp.py  mousewheelbind.py  pluginuriselector.py  procmon.py  promptupscalerselect.py  promptweighterselect.py  quantizerselect.py  recipeformentries.py  recipes.py  recipesform.py  resources.py  scrolledtext.py  showindirectory.py  spinbox.py  stdinpipe.py  submodelselect.py  syntaxhighlighter.py  tearoffimagepane.py  textentry.py  themetext.py  util.py
dgenerate/image_process/: __init__.py  arguments.py  invoker.py  renderloop.py  renderloopconfig.py
dgenerate/imageprocessors/: __init__.py  adetailer.py  aedetailer.py  anyline.py  canny.py  constants.py  crop_to_mask.py  cv2imageops.py  exceptions.py  hed.py  imageops.py  imageprocessor.py  imageprocessorchain.py  imageprocessorloader.py  imageprocessormixin.py  inpaint.py  leres.py  linart_anime.py  linart_standard.py  lineart.py  loader.py  midas.py  midis.py  mlsd.py  ncnn_model.py  normal_bae.py  openpose.py  outpaint_mask.py  paste.py  patchmatch.py  pidi.py  sam.py  teed.py  u_sam.py  upscale_tiler.py  upscaler.py  upscaler_ncnn.py  util.py  yolo.py  yolo_sam.py  (+1 more)
dgenerate/latentsprocessors/: __init__.py  constants.py  exceptions.py  interposer.py  latentsprocessor.py  latentsprocessorchain.py  latentsprocessorloader.py  noise.py  scale.py
dgenerate/pipelinewrapper/: __init__.py  argreconstruct.py  arguments.py  cache.py  constants.py  denoise_range.py  enums.py  help.py  hfutil.py  models.py  pipelines.py  promptweighter.py  quanto.py  schedulers.py  uris.py  util.py  wrapper.py  wrapperarguments.py
dgenerate/postprocessors/: __init__.py  exceptions.py  loader.py  postprocessor.py  postprocessorchain.py  postprocessormixin.py  upscaler.py
dgenerate/preprocessors/: __init__.py  canny.py  (+9 more)
docker/: README.md  README.rst  build.bat  dockerfile  dockerfile-cuda  dockerfile-rocm  install.sh  install_dev.sh  run.bat  run.py
docs/: conf.py  dgenerate.preprocessors.rst  dgenerate.rst  dgenerate_submodules.rst  imageprocessors_constants.rst  index.rst  intro.rst  latentsprocessors_constants.rst  manual.rst  modules.rst  pipeline_wrapper_constants.rst  pipelinewrapper_constants.rst  promptupscalers_constants.rst  promptweighters_constants.rst
doctools/: README.md  __init__.py  build.py
examples/: README.md  README.rst  README.txt  run.py  run_all.py
installer/: MANIFEST.in  Product.wix  README.md  README.txt  build.bat  build.py  dgenerate.spec  dgenerate.wixproj  dgenerate_windowed.spec  license.rtf  network_installer.spec  product.wix  pyproject.toml
installer/dgenerate_windowed/: __init__.py  dgenerate_windowed.py
installer/network_installer/: __init__.py  common_types.py  github_client.py  gui.py  main.py  platform_detection.py  setup_analyzer.py  subprocess_utils.py  uv_installer.py
installer/network_installer/platform_handlers/: __init__.py  base_uv_handler.py  base_uv_installer.py  linux_uv_handler.py  linux_uv_installer.py  macos_uv_handler.py  macos_uv_installer.py  windows_uv_handler.py  windows_uv_installer.py
installer/network_installer/resources/: __init__.py
installer/network_installer/uv_platform_handlers/: __init__.py  base_uv_handler.py  linux_uv_handler.py  macos_uv_handler.py  windows_uv_handler.py
poetry/: dep-update-check.py  pyproject.toml
readme/: build.py  docs_intro.template.rst  manual.template.rst  readme.template.rst
(+953 files in other folders)
