[tool.poetry]
name = "dgenerate"
version = "0.18.1"
description = "Stable diffusion batch image generation tool with support for video / gif / webp animation transcoding."
authors = ["Teriks <Teriks@users.noreply.github.com>"]
readme = "README.rst"
license = "BSD 3-Clause"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'License :: OSI Approved :: BSD License',
    'Intended Audience :: Other Audience',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Topic :: Utilities',
]

[tool.poetry.dependencies]
python = "^3.10"
diffusers = "^0.20.0"
transformers = "^4.31.0"
accelerate = "^0.22.0"
pytorch-lightning = "^2.0.7"
omegaconf = "^2.3.0"
requests = "^2.31.0"
av = "^10.0.0"
pillow = "^10.0.0"
torch = { version = "2.0.1+cu118", source = "pytorch" }
fake-useragent = "^1.1.3"
flax = { version = "0.7.2", optional = true}
jax = {version = "0.4.14", optional = true, extras=["cuda12_pip"]}

[tool.poetry.extras]
flax = ["flax", "jax"]

[tool.poetry.scripts]
dgenerate = 'dgenerate.__init__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118/"
priority = "explicit"

[[tool.poetry.source]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
priority = "supplemental"