[tool.poetry]
name = "dgenerate"
version = "0.0.0"
description = "Stable diffusion batch image generation tool."
authors = ["Teriks <Teriks@users.noreply.github.com>"]
readme = "README.rst"
license = "BSD 3-Clause"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
diffusers = "0.32.2"
bitsandbytes = "0.45.2"
torchao = "0.8.0"
peft = "0.14.0"
transformers = "4.48.1"
accelerate = "1.3.0"
ultralytics = {version = "8.3.65", platform = "not_darwin"}
optimum-quanto = "0.2.6"
pytorch-lightning = "^2.5.0"
lightning-utilities = "^0.12.0"
lightning-fabric = "^2.5.0"
omegaconf = "^2.3.0"
requests = "^2.32.3"
av = "^14.1.0"
pillow = "^11.1.0"
jinja2 = "^3.1.5"
torch = { version = "2.6.0", source = "pytorch" }
torchvision = {version = "0.21.0", source = "pytorch"}
torchsde = "0.2.6"
fake-useragent = "2.0.3"
opencv-python-headless = "^4.11.0.86"
psutil = "^6.1.1"
sentencepiece = "^0.2.0"
ftfy = "^6.3.1"
beautifulsoup4 = "^4.13.1"
matplotlib = "^3.10.0"
filelock = "^3.17.0"
importlib_metadata = "^8.6.1"
scipy = "^1.15.1"
einops = "^0.8.0"
timm = "^0.6.7"
scikit-image = "^0.25.1"
numpy = "^2.2.2"
spandrel = "^0.4.1"
spandrel_extra_arches = "^0.2.0"
asteval = "^1.0.6"
pygments = "^2.19.1"
toml = "^0.10.2"
tklinenums = "^1.7.1"
pyrfc6266 = "^1.0.2"
protobuf = "^5.29.3"
compel = "^2.0.3"
lark = "^1.2.2"
controlnet_aux = "^0.0.9"
packaging = "^24.2"

[tool.poetry.scripts]
dgenerate = 'dgenerate.__init__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124/"
priority = "explicit"