[tool.poetry]
name = "dgenerate"
version = "0.0.0"
description = "Stable diffusion batch image generation tool."
authors = ["Teriks <Teriks@users.noreply.github.com>"]
readme = "README.rst"
license = "BSD 3-Clause"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
diffusers = "0.33.1"
hf_xet = "^1.1.0"
bitsandbytes = "0.45.5"
peft = "0.15.1"
transformers = "4.51.3"
accelerate = "1.6.0"
DeepCache = "0.1.1"
dynamicprompts = "0.31.0"
spacy = "3.8.5"
ultralytics = {version = "8.3.127", platform = "not_darwin"}
langcodes = "^3.5.0"
argostranslate = "^1.9.6"
pytorch-lightning = "^2.5.1"
lightning-utilities = "^0.14.3"
charset-normalizer = "^3.4.1"
lightning-fabric = "^2.5.1"
omegaconf = "^2.3.0"
requests = "^2.32.3"
av = "^14.3.0"
pillow = "^11.2.1"
piexif = "^1.1.3"
jinja2 = "^3.1.6"
torch = { version = "2.6.0", source = "pypi" }
torchvision = {version = "0.21.0", source = "pypi"}
torchsde = "0.2.6"
fake-useragent = "2.2.0"
opencv-python-headless = "^4.11.0.86"
psutil = "^7.0.0"
sentencepiece = "^0.2.0"
ftfy = "^6.3.1"
beautifulsoup4 = "^4.13.3"
matplotlib = "^3.10.1"
filelock = "^3.18.0"
importlib_metadata = "^8.6.1"
scipy = "^1.15.2"
einops = "^0.8.1"
timm = "^1.0.15"
scikit-image = "^0.25.2"
numpy = "^2.2.5"
spandrel = "^0.4.1"
spandrel_extra_arches = "^0.2.0"
asteval = "^1.0.6"
pygments = "^2.19.1"
toml = "^0.10.2"
tklinenums = "^1.7.1"
pyrfc6266 = "^1.0.2"
protobuf = "^6.30.2"
lark = "^1.2.2"
packaging = "^24.2"


[tool.poetry.scripts]
dgenerate = 'dgenerate.__init__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"