[tool.poetry]
name = "dgenerate"
version = "0.0.0"
description = "Stable diffusion batch image generation tool."
authors = ["Teriks <Teriks@users.noreply.github.com>"]
readme = "README.rst"
license = "BSD 3-Clause"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
diffusers = "0.34.0"
hf_xet = "^1.1.5"
bitsandbytes = "0.46.1"
peft = "0.16.0"
transformers = "4.53.1"
accelerate = "1.8.1"
DeepCache = "0.1.1"
patchmatch-cython = "^0.1.4"
dynamicprompts = "0.31.0"
spacy = "3.8.7"
dgenerate-ultralytics-headless = {version = "8.3.163", platform = "not_darwin"}
langcodes = "^3.5.0"
pytorch-lightning = "^2.5.2"
lightning-utilities = "^0.14.3"
charset-normalizer = "^3.4.2"
lightning-fabric = "^2.5.2"
omegaconf = "^2.3.0"
requests = "^2.32.4"
av = "^15.0.0"
pillow = "^11.3.0"
piexif = "^1.1.3"
jinja2 = "^3.1.6"
torch = { version = "2.7.1", source = "pypi" }
torchvision = {version = "0.22.1", source = "pypi"}
torchsde = "0.2.6"
fake-useragent = "2.2.0"
opencv-python-headless = "^4.12.0.88"
psutil = "^7.0.0"
dbowring-sentencepiece = "^0.2.1.post0"
ftfy = "^6.3.1"
beautifulsoup4 = "^4.13.4"
matplotlib = "^3.10.3"
filelock = "^3.18.0"
importlib_metadata = "^8.7.0"
scipy = "^1.15.1"
einops = "^0.8.1"
timm = "^1.0.17"
scikit-image = "^0.25.2"
numpy = "^2.2.6"
spandrel = "^0.4.1"
spandrel_extra_arches = "^0.2.0"
asteval = "^1.0.6"
pygments = "^2.19.2"
toml = "^0.10.2"
tklinenums = "^1.7.1"
pyrfc6266 = "^1.0.2"
protobuf = "^6.31.1"
lark = "^1.2.2"
packaging = "^25.0"
ctranslate2 = "^4.6.0"
sacremoses = "0.1.1"
preshed = "^3.0.10"

[tool.poetry.scripts]
dgenerate = 'dgenerate.__init__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"